# vscode-kanata

./: .eslintrc.js  .gitignore  .gitmodules  .vscodeignore  CHANGELOG.md  CONTRIBUTING.md  HACKING.md  Makefile  README.md  flake.nix  justfile  keyberon  language-configuration.json  package.json  parser  shell.nix  tsconfig.json
.github/: pull_request_template.md
.github/workflows/: publish.yml  rust.yml  trigger.yml
client/src/: index.ts
kanata-ls/: Cargo.toml  Makefile  README.md
kanata-ls/src/: helpers.rs  lib.rs  main.rs  main_native.rs
kanata-ls/src/formatter/: mod.rs  remove_excessive_newlines.rs
kanata-ls/src/formatter/defsrc_layout/: get_keys.rs  get_layout.rs
kanata-ls/src/navigation/: mod.rs
kanata-ls/tests/: cli_integration.rs
kls/: .gitignore  Cargo.toml  justfile
kls/src/: helpers.rs  lib.rs  semantic_tokens.rs
kls/src/formatter/: ext_tree.rs  mod.rs  remove_excessive_newlines.rs  use_defsrc_layout_on_deflayers.rs
kls/src/formatter/defsrc_layout/: get_keys.rs  get_layout.rs  mod.rs
kls/src/navigation/: mod.rs
server/src/: index.ts
syntaxes/: kanata.tmLanguage.json
test-fixtures/workspace/: test.code-workspace
test-fixtures/workspace/a/: minimal.kbd
test/src/: runTest.ts
vscode/: .vscodeignore  DEVELOPMENT.md  Makefile  README.md  language-configuration.json  package.json
vscode/client/src/: index.ts
vscode/server/src/: index.ts
vscode/syntaxes/: kanata.tmLanguage.json
vscode/test-fixtures/workspace/a/: included.kbd
vscode/test-fixtures/workspace/b/: kanata.kbd
vscode/test/src/: runTest.ts
vscode/test/src/suite/: extension.test.ts  index.ts
