[package]
name = "kls"
version = "0.0.0"
authors = ["rszyma <rszyma.dev@gmail.com>"]
description = "Language server for kanata keyboard remapper"
keywords = ["kanata", "lsp", "vscode"]
categories = ["config", "development-tools", "parsing"]
homepage = "https://github.com/rszyma/vscode-kanata"
repository = "https://github.com/rszyma/vscode-kanata"
readme = "README.md"
license = "LGPL-3.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
bench = false

[dependencies]
kanata-parser = { path = "../kanata-local/parser", features = ["cmd"]}

console_error_panic_hook = "0.1.7"
js-sys = "0.3.53"
lsp-types = "0.95.0"
serde = { version = "^1.0.194", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
wasm-bindgen = "0.2.88"
web-sys = { version = "0.3.64", features = ["console"] }
rustc-hash = "^1.1.0"
anyhow = "^1.0.72"
serde_json = "^1.0.104"
unicode-segmentation = "1.10.1"
zduny-wasm-timer = "0.2.8"
itertools = "0.12.1"

[dev-dependencies]
# wasm-bindgen-test = "0.3.39"
