[package]
name = "kls"
version = "0.0.0"
authors = ["rszyma <rszyma.dev@gmail.com>"]
description = "Language server for kanata keyboard remapper"
keywords = ["kanata", "lsp", "vscode"]
categories = ["config", "development-tools", "parsing"]
homepage = "https://github.com/rszyma/vscode-kanata"
repository = "https://github.com/rszyma/vscode-kanata"
readme = "README.md"
license = "LGPL-3.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
bench = false

[dependencies]
kanata-parser = { path = "../kanata/parser", features = ["lsp", "cmd", "gui"]}

# The new Uri in 0.96.0 is unusable.
# issue: https://github.com/gluon-lang/lsp-types/issues/284
lsp-types = "0.95.0"

# https://github.com/rustwasm/wasm-pack/issues/1389
#
#  panicked at /rust/deps/dlmalloc-0.2.6/src/dlmalloc.rs:1198:13:
#  assertion failed: psize <= size + max_overhead
#
wasm-bindgen = "0.2.97" # 0.2.97 still gives panic when not using wee_malloc
wee_alloc = "0.4.5"

console_error_panic_hook = "0.1.7"
js-sys = "0.3.53"
serde = { version = "^1.0.194", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
web-sys = { version = "0.3.64", features = ["console"] }
rustc-hash = "^2.1.0"
anyhow = "^1.0.72"
serde_json = "^1.0.104"
unicode-segmentation = "^1.10.1"
zduny-wasm-timer = "0.2.8"
itertools = "0.13.0"

[dev-dependencies]
# wasm-bindgen-test = "0.3.39"
